--- a/livroJS/cap12/config/config.json
+++ b/livroJS/cap12/config/config.json
@@ -1,8 +1,7 @@
 {
-  {
-    "development": {
+    "development": 
+    {
       "dialect": "sqlite",
       "storage": "../data/editora.db" 
     }
-  }
 }
