--- a/livroJS/cap12/package.json
+++ b/livroJS/cap12/package.json
@@ -9,6 +9,7 @@
   "author": "Alexandre Cassilhas",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^5.1.0",
     "sequelize": "^6.37.7",
     "sequelize-cli": "^6.6.3",
