--- a/livroJS/cap12/package.json
+++ b/livroJS/cap12/package.json
@@ -4,7 +4,8 @@
   "description": "Express Learning",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon app.js"
   },
   "author": "Alexandre Cassilhas",
   "license": "ISC",
